--- a/MathFun1000/Web.config
+++ b/MathFun1000/Web.config
@@ -12,6 +12,7 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MathFun1000-20150127154319;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MathFun1000-20150127154319.mdf" />
   </connectionStrings>
   <system.web>
+    <customErrors mode ="Off"/>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <pages>
