Can now select from 2 different problems.
Also, I updated the actual website just to make sure it would still work
and it does.

--- a/MathFun1000/MathFun1000.csproj
+++ b/MathFun1000/MathFun1000.csproj
@@ -133,6 +133,7 @@
     <Content Include="Account\OpenAuthProviders.ascx" />
     <Content Include="Account\Register.aspx" />
     <Content Include="Account\RegisterExternalLogin.aspx" />
+    <Content Include="Chapters.aspx" />
     <Content Include="Content\MathProblemStyle.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -296,6 +297,13 @@
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Chapter.cs" />
+    <Compile Include="Chapters.aspx.cs">
+      <DependentUpon>Chapters.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Chapters.aspx.designer.cs">
+      <DependentUpon>Chapters.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
