--- a/MathFun1000/Web.config
+++ b/MathFun1000/Web.config
@@ -12,7 +12,7 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MathFun1000-20150127154319;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MathFun1000-20150127154319.mdf" />
   </connectionStrings>
   <system.web>
-    <customErrors mode ="Off"/>
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <pages>
@@ -65,6 +65,10 @@
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
