--- a/MathFun1000/MathFun1000.csproj
+++ b/MathFun1000/MathFun1000.csproj
@@ -316,6 +316,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="IProblemType.cs" />
     <Compile Include="MathProgram.aspx.cs">
       <DependentUpon>MathProgram.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
