Graph Problem implemented

--- a/MathFun1000/MathFun1000.csproj
+++ b/MathFun1000/MathFun1000.csproj
@@ -326,6 +326,7 @@
     <Compile Include="Graph.aspx.designer.cs">
       <DependentUpon>Graph.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Graphs.cs" />
     <Compile Include="IProblemType.cs" />
     <Compile Include="MathProgram.aspx.cs">
       <DependentUpon>MathProgram.aspx</DependentUpon>
