--- a/MathFun1000/Web.config
+++ b/MathFun1000/Web.config
@@ -20,6 +20,11 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
+    <add name ="webAppconnString"
+         connectionString="Server=MYSQL5002.Smarterasp.net;Uid=9bad3d_test;Password=math4fun#;Database=db_9bad3d_test;"
+         providerName="Math Fun 1000"/>
+  </connectionStrings>
+  <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MathFun1000-20150127154319;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MathFun1000-20150127154319.mdf"/>
   </connectionStrings>
   <system.web>
