--- a/MathFun1000/MathFun1000.csproj
+++ b/MathFun1000/MathFun1000.csproj
@@ -136,6 +136,7 @@
     <Content Include="Account\OpenAuthProviders.ascx" />
     <Content Include="Account\Register.aspx" />
     <Content Include="Account\RegisterExternalLogin.aspx" />
+    <Content Include="AddProblems.aspx" />
     <Content Include="AddStep.aspx" />
     <Content Include="Chapters.aspx" />
     <Content Include="Content\MathProblemStyle.css" />
@@ -214,6 +215,7 @@
     <Content Include="Global.asax" />
     <Content Include="LoggedIn.aspx" />
     <Content Include="MathProgram.aspx" />
+    <Content Include="MultipleChoice.aspx" />
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\Dan.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
@@ -259,6 +261,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddProblems.aspx.cs">
+      <DependentUpon>AddProblems.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddProblems.aspx.designer.cs">
+      <DependentUpon>AddProblems.aspx</DependentUpon>
+    </Compile>
     <Compile Include="AddStep.aspx.cs">
       <DependentUpon>AddStep.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -362,6 +371,13 @@
       <DependentUpon>MathProgram.aspx</DependentUpon>
     </Compile>
     <Compile Include="Account\PasswordHash.cs" />
+    <Compile Include="MultipleChoice.aspx.cs">
+      <DependentUpon>MultipleChoice.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MultipleChoice.aspx.designer.cs">
+      <DependentUpon>MultipleChoice.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Problem.cs" />
     <Compile Include="Problems.aspx.cs">
       <DependentUpon>Problems.aspx</DependentUpon>
