--- a/MathFun1000/MathFun1000.csproj
+++ b/MathFun1000/MathFun1000.csproj
@@ -217,6 +217,7 @@
     <Content Include="Global.asax" />
     <Content Include="LoggedIn.aspx" />
     <Content Include="MathProgram.aspx" />
+    <Content Include="Multi.aspx" />
     <Content Include="MultipleChoice.aspx" />
     <Content Include="packages.config" />
     <None Include="Properties\PublishProfiles\Dan.pubxml" />
@@ -375,6 +376,13 @@
       <DependentUpon>MathProgram.aspx</DependentUpon>
     </Compile>
     <Compile Include="Account\PasswordHash.cs" />
+    <Compile Include="Multi.aspx.cs">
+      <DependentUpon>Multi.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Multi.aspx.designer.cs">
+      <DependentUpon>Multi.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MultipleChoice.aspx.cs">
       <DependentUpon>MultipleChoice.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -382,6 +390,7 @@
     <Compile Include="MultipleChoice.aspx.designer.cs">
       <DependentUpon>MultipleChoice.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Multis.cs" />
     <Compile Include="Problem.cs" />
     <Compile Include="Problems.aspx.cs">
       <DependentUpon>Problems.aspx</DependentUpon>
