--- a/MathFun1000/Web.config
+++ b/MathFun1000/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
-    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=~\Images\Graph Temp Folder\;" />
+    <add key="ChartImageHandler" value="storage=file;timeout=20;dir=~\Images\Graph_TempFolder\;" />
   </appSettings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
