--- a/MathFun1000/Web.config
+++ b/MathFun1000/Web.config
@@ -17,6 +17,10 @@
       <remove name="ChartImageHandler" />
       <add name="ChartImageHandler" preCondition="integratedMode" verb="GET,HEAD,POST" path="ChartImg.axd" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </handlers>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="/http404.aspx" responseMode="ExecuteURL"/>
+    </httpErrors>
   </system.webServer>
   <!--<connectionStrings>
     <add name ="DefaultConnection"
@@ -31,7 +35,9 @@
     <httpHandlers>
       <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false" />
     </httpHandlers>
-    <customErrors mode="Off" />
+    <customErrors mode="On" redirectMode="ResponseRedirect">
+      <error statusCode="404" redirect="http404.aspx"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
