--- a/MathFun1000/MathFun1000.csproj
+++ b/MathFun1000/MathFun1000.csproj
@@ -450,6 +450,8 @@
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
     </Compile>
+    <Compile Include="SQLHandler.cs" />
+    <Compile Include="SQLParameters.cs" />
     <Compile Include="Tutorial.cs" />
     <Compile Include="Unguided.cs" />
     <Compile Include="ViewSwitcher.ascx.cs">
