--- a/MathFun1000/Account/Web.config
+++ b/MathFun1000/Account/Web.config
@@ -1,12 +1,21 @@
 ﻿<?xml version="1.0"?>
-<configuration>
 
+<configuration>
   <location path="Manage.aspx">
+
+
     <system.web>
+      <authentication mode="Forms" />
+      <authorization>
+        <deny users="?" />
+      </authorization>
+    </system.web>
+    
+    <!--<system.web>
       <authorization>
         <deny users="?"/>
       </authorization>
-    </system.web>
+    </system.web>-->
+    
   </location>
-
 </configuration>
