--- a/MathFun1000/Web.config
+++ b/MathFun1000/Web.config
@@ -32,8 +32,14 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MathFun1000-20150127154319;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MathFun1000-20150127154319.mdf" />
   </connectionStrings>
   <system.web>
+    <webServices>
+      <protocols>
+        <add name="HttpPost"/>  
+      </protocols>
+    </webServices>
     <httpHandlers>
       <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false" />
+      
     </httpHandlers>
     <customErrors mode="On" redirectMode="ResponseRedirect" defaultRedirect="ERROR.aspx">
       <error statusCode="404" redirect="http404.aspx"/>
