--- a/MathFun1000/MathFun1000.csproj
+++ b/MathFun1000/MathFun1000.csproj
@@ -231,6 +231,7 @@
     <Content Include="ParameterizedQuery.aspx" />
     <Content Include="Problems.aspx" />
     <Content Include="Rules.aspx" />
+    <Content Include="Scripts\ContentManager.js" />
     <Content Include="Scripts\Graphs.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -260,6 +261,7 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="Scripts\wysiwyg.js" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
