Updated Web. Config in Account Folder, Register
Inserted Connection string in web.config in Account folder, the Register
page should now work.

--- a/MathFun1000/Account/Web.config
+++ b/MathFun1000/Account/Web.config
@@ -16,6 +16,12 @@
         <deny users="?"/>
       </authorization>
     </system.web>-->
+
+    <connectionStrings>
+      <add name ="webAppconnString"
+           connectionString="Server=MYSQL5002.Smarterasp.net;Uid=9bad3d_test;Password=math4fun#;Database=db_9bad3d_test;"
+           providerName="Math Fun 1000"/>
+    </connectionStrings>
     
   </location>
 </configuration>
