--- a/MathFun1000/Web.config
+++ b/MathFun1000/Web.config
@@ -41,9 +41,8 @@
       <add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false" />
       
     </httpHandlers>
-    <!--<customErrors mode="On" redirectMode="ResponseRedirect" defaultRedirect="ERROR.aspx">-->
-      <customErrors mode="Off">
-      <!--<error statusCode="404" redirect="http404.aspx"/>-->
+    <customErrors mode="On" redirectMode="ResponseRedirect" defaultRedirect="ERROR.aspx">
+      <error statusCode="404" redirect="http404.aspx"/>
     </customErrors>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
